# colleagrueet

./: .gitignore  QUICKSTART.md  RASPBERRY_PI_SETUP.md  README.md  capture_faces.py  config.py  main.py  people_config.py  pyproject.toml
faces/: README.md  person.config.example
