[project]
name = "colleagrueet"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "deepface>=0.0.95",
    "gtts>=2.5.4",
    "numpy>=2.0.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "pyttsx3>=2.99",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "ultralytics>=8.3.214",
]
